@@ -1,7 +1,6 @@
-package org.movie.reviewer.global.security.utils;
+package org.movie.reviewer.global.security.provider;
 
 import io.jsonwebtoken.Claims;
-import io.jsonwebtoken.ExpiredJwtException;
 import io.jsonwebtoken.Jwts;
 import io.jsonwebtoken.MalformedJwtException;
 import io.jsonwebtoken.SignatureAlgorithm;
@@ -11,7 +10,8 @@ import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Date;
-import java.util.stream.Collectors;
+import java.util.List;
+import java.util.function.Function;
 import lombok.extern.slf4j.Slf4j;
 import org.movie.reviewer.global.security.exception.JwtInvalidException;
 import org.movie.reviewer.global.security.tokens.JsonPrincipalAuthenticationToken;
@@ -23,18 +23,19 @@ import org.springframework.stereotype.Component;
 
 @Slf4j
 @Component
-public class JsonWebTokenIssuer {
+public class JwtProvider {
 
+  private static String TYPE = "type";
+  private static String JWT_TYPE = "JWT";
   private final int ONE_SECONDS = 1000;
   private final int ONE_MINUTE = 60 * ONE_SECONDS;
   private final String KEY_ROLES = "roles";
-
   private final byte[] secretKeyBytes;
   private final byte[] refreshSecretKeyBytes;
   private final int expireMin;
   private final int refreshExpireMin;
 
-  public JsonWebTokenIssuer(
+  public JwtProvider(
       @Value("${jwt.secret}") String secretKey,
       @Value("${jwt.refresh-secret}") String refreshSecretKey,
       @Value("${jwt.expire-min}") int expireMin,
@@ -45,11 +46,12 @@ public class JsonWebTokenIssuer {
     this.refreshExpireMin = refreshExpireMin;
   }
 
-  private String createToken(String email, String authority, byte[] secretKeyBytes, int expireMin) {
+  public String createAccessToken(String email, String authority) {
     Date now = new Date(System.currentTimeMillis());
     Claims claims = Jwts.claims().setSubject(email);
     claims.put(KEY_ROLES, Collections.singleton(authority));
     return Jwts.builder()
+        .setHeaderParam(TYPE, JWT_TYPE)
         .setClaims(claims)
         .setIssuedAt(now)
         .setExpiration(new Date(now.getTime() + ONE_MINUTE * expireMin))
@@ -57,40 +59,41 @@ public class JsonWebTokenIssuer {
         .compact();
   }
 
-  public String createAccessToken(String email, String authority) {
-    return createToken(email, authority, secretKeyBytes, expireMin);
+
+  public String createRefreshToken(String username) {
+    Date now = new Date(System.currentTimeMillis());
+    Claims claims = Jwts.claims().setSubject(username);
+    String refreshToken = Jwts.builder()
+        .setHeaderParam(TYPE, JWT_TYPE)
+        .setClaims(claims)
+        .setExpiration(new Date(now.getTime() + ONE_MINUTE * refreshExpireMin))
+        .signWith(SignatureAlgorithm.HS256, refreshSecretKeyBytes)
+        .compact();
+    return refreshToken;
   }
 
 
-  public String createAccessToken(Authentication authentication) {
-    String authorities = authentication.getAuthorities().stream().toList().get(0).toString();
-    return createToken((String) authentication.getPrincipal(), authorities,
-        secretKeyBytes, expireMin);
+  public boolean validAccessToken(String token) {
+    return validToken(token, secretKeyBytes);
   }
 
-  public String createRefreshToken(String email, String authority) {
-    return createToken(email, authority, refreshSecretKeyBytes, refreshExpireMin);
+
+  public boolean validRefreshToken(String token) {
+    return validToken(token, refreshSecretKeyBytes);
   }
 
-  public String createRefreshToken(Authentication authentication) {
-    String authorities = authentication.getAuthorities().stream().toList().get(0).toString();
-    return createToken((String) authentication.getPrincipal(), authorities,
-        refreshSecretKeyBytes, refreshExpireMin);
-  }
-
-  public boolean validToken(String jsonWebToken) {
+  public boolean validToken(String token, byte[] key) {
     try {
-      Claims claims = Jwts.parser()
-          .setSigningKey(secretKeyBytes)
-          .parseClaimsJws(jsonWebToken)
+      Jwts.parser()
+          .setSigningKey(key)
+          .parseClaimsJws(token)
           .getBody();
-      log.info("email : " + claims.getSubject());
       return true;
-    } catch (SignatureException signatureException) {
+    } catch (SignatureException signatureException) { //토큰 오류 시 500에러가 아니라 unauthorization 오류가 나야함
       throw new JwtInvalidException("signature key is different", signatureException);
-    } catch (ExpiredJwtException expiredJwtException) {
-      throw new JwtInvalidException("expired token", expiredJwtException);
-    } catch (MalformedJwtException malformedJwtException) {
+    }
+    //ExpiredJwtException은 custom 하지 않고 바로 리턴해서 access 토큰의 만료여부 체크
+    catch (MalformedJwtException malformedJwtException) {
       throw new JwtInvalidException("malformed token", malformedJwtException);
     } catch (UnsupportedJwtException unsupportedJwtException) {
       throw new JwtInvalidException("unsupported token", unsupportedJwtException);
@@ -108,9 +111,39 @@ public class JsonWebTokenIssuer {
 
     Collection<? extends GrantedAuthority> authorities =
         Arrays.stream(claims.get(KEY_ROLES).toString().split(","))
-            .map(SimpleGrantedAuthority::new)
-            .collect(Collectors.toList());
+            .map(SimpleGrantedAuthority::new).toList();
 
     return new JsonPrincipalAuthenticationToken(claims.getSubject(), "", authorities);
+  }
+
+  public String getAuthorities(String token){
+    Claims claims = Jwts.parser()
+        .setSigningKey(secretKeyBytes)
+        .parseClaimsJws(token)
+        .getBody();
+
+    List<SimpleGrantedAuthority> authorities = Arrays.stream(
+            claims.get(KEY_ROLES).toString().split(","))
+        .map(SimpleGrantedAuthority::new).toList();
+    return authorities.get(0).toString();
+
+  }
+
+  // 토큰 만료일자 조회
+  public Date getExpirationDateFromRefreshToken(String token) {
+    return getClaimFromRefreshToken(token, Claims::getExpiration);
+  }
+
+  public String getUsernameFromRefreshToken(String refreshToken) {
+    return getClaimFromRefreshToken(refreshToken, Claims::getSubject);
+  }
+
+  public <T> T getClaimFromRefreshToken(String token, Function<Claims, T> claimsResolver) {
+    final Claims claims = getAllClaimsFromRefreshToken(token);
+    return claimsResolver.apply(claims);
+  }
+
+  private Claims getAllClaimsFromRefreshToken(String token) {
+    return Jwts.parser().setSigningKey(refreshSecretKeyBytes).parseClaimsJws(token).getBody();
   }
 }
